gke/voting-ing.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: vote
  labels:
    app.kubernetes.io/part-of: docker-voting
    app.kubernetes.io/version: "1.0.0"
    env: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "vote-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: vote
          servicePort: vote-http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: result
  labels:
    app.kubernetes.io/part-of: docker-voting
    app.kubernetes.io/version: "1.0.0"
    env: production
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "result-static-ip"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: result
          servicePort: result-http
...
